--- a/index.html
+++ b/index.html
@@ -2,36 +2,64 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Mi Mapa con Google Maps</title>
+  <title>Mapa de Prueba – Percy Peralta</title>
   <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      text-align: center;
+    }
+
+    h1 {
+      color: #2c3e50;
+    }
+
+    #alerta {
+      color: #e67e22;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
+
     #map {
       height: 500px;
       width: 100%;
+      max-width: 800px;
+      margin: 0 auto;
       border: 2px solid #ccc;
-      margin-top: 20px;
+    }
+
+    footer {
+      margin-top: 30px;
+      font-size: 0.9em;
+      color: #777;
     }
   </style>
 </head>
 <body>
 
-  <h1>Mi Mapa Interactivo</h1>
-  <p>Haz clic en el mapa para agregar un marcador.</p>
+  <h1>Proyecto de Mapa – Percy Peralta</h1>
+  <p id="alerta">🚧 Este sitio está en fase de prueba. Algunas funciones pueden no estar completas.</p>
+
   <div id="map"></div>
+
+  <footer>
+    Desarrollado por Percy Peralta con ayuda de ChatGPT – 2025
+  </footer>
 
   <script>
     let map;
 
     function initMap() {
-      // Coordenadas iniciales (ejemplo: Lima, Perú)
+      // Coordenadas de inicio (Lima, Perú)
       const centro = { lat: -12.0464, lng: -77.0428 };
 
-      // Crear mapa
+      // Crear el mapa
       map = new google.maps.Map(document.getElementById("map"), {
         center: centro,
         zoom: 12,
       });
 
-      // Evento click para agregar marcador
+      // Agregar marcador al hacer clic
       map.addListener("click", function (e) {
         addMarker(e.latLng);
       });
@@ -45,9 +73,10 @@
     }
   </script>
 
-  <!-- Reemplaza TU_API_KEY con tu clave -->
+  <!-- Reemplaza TU_API_KEY con tu clave real -->
   <script async
     src="https://maps.googleapis.com/maps/api/js?key=TU_API_KEY&callback=initMap">
   </script>
+
 </body>
 </html>
