--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Mapa de Prueba – Percy Peralta</title>
+  <title>Mapa de Prueba dptxman</title>
   <style>
     body {
       font-family: Arial, sans-serif;
