--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div id="map"></div>
 
   <footer>
-    Desarrollado por Percy Peralta con ayuda de ChatGPT – 2025
+    Desarrollado por dptxman con ayuda de ChatGPT – 2025
   </footer>
 
   <script>
