--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
 
-  <h1>Proyecto de Mapa – Percy Peralta</h1>
+  <h1>Proyecto de Mapa </h1>
   <p id="alerta">🚧 Este sitio está en fase de prueba. Algunas funciones pueden no estar completas.</p>
 
   <div id="map"></div>
